// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисует компонент  на мобилке 1`] = `
<div
  className="BillingFrameSberbank BillingFrameSberbank_platform_mobile"
>
  <div
    className="BillingFrameSberbank__controls"
  >
    <TextInput
      autocomplete="on"
      className="BillingFrameSberbank__phoneInput"
      disabled={false}
      error=""
      hasClear={true}
      maxLength={16}
      name="phone"
      onChange={[Function]}
      placeholder="Номер телефона"
      radius="r8"
      size="m"
      type="tel"
      value="+7"
      valueProcessor={[Function]}
    />
    <Button
      className="BillingFrameSberbank__button"
      color="green"
      disabled={false}
      onClick={[Function]}
      size="l"
      type="button"
      width="default"
    >
      Продолжить
    </Button>
  </div>
  <div
    className="BillingFrameSberbank__disclaimer"
  >
    Если у вас не подключен мобильный банк, 
    <Link>
      оплатите на сайте Сбербанка
    </Link>
     или  выберите другой способ оплаты
  </div>
</div>
`;

exports[`правильно рисует компонент когда не передан телефон 1`] = `
<div
  className="BillingFrameSberbank BillingFrameSberbank_platform_desktop"
>
  <div
    className="BillingFrameSberbank__controls"
  >
    <TextInput
      autocomplete="on"
      className="BillingFrameSberbank__phoneInput"
      disabled={false}
      error=""
      hasClear={true}
      maxLength={16}
      name="phone"
      onChange={[Function]}
      placeholder="Номер телефона"
      radius="r8"
      size="l"
      type="tel"
      value="+7"
      valueProcessor={[Function]}
    />
    <Button
      className="BillingFrameSberbank__button"
      color="green"
      disabled={false}
      onClick={[Function]}
      size="l"
      type="button"
      width="default"
    >
      Продолжить
    </Button>
  </div>
  <div
    className="BillingFrameSberbank__disclaimer"
  >
    Если у вас не подключен мобильный банк, 
    <Link>
      оплатите на сайте Сбербанка
    </Link>
     или  выберите другой способ оплаты
  </div>
</div>
`;

exports[`правильно рисует компонент когда передан телефон 1`] = `
<div
  className="BillingFrameSberbank BillingFrameSberbank_platform_desktop"
>
  <div
    className="BillingFrameSberbank__controls"
  >
    <TextInput
      autocomplete="on"
      className="BillingFrameSberbank__phoneInput"
      disabled={false}
      error=""
      hasClear={true}
      maxLength={16}
      name="phone"
      onChange={[Function]}
      placeholder="Номер телефона"
      radius="r8"
      size="l"
      type="tel"
      value="+7 999 777-22-66"
      valueProcessor={[Function]}
    />
    <Button
      className="BillingFrameSberbank__button"
      color="green"
      disabled={false}
      onClick={[Function]}
      size="l"
      type="button"
      width="default"
    >
      Продолжить
    </Button>
  </div>
  <div
    className="BillingFrameSberbank__disclaimer"
  >
    Если у вас не подключен мобильный банк, 
    <Link>
      оплатите на сайте Сбербанка
    </Link>
     или  выберите другой способ оплаты
  </div>
</div>
`;

exports[`при сабмите телефона если номер корректный покажет сообщение об смс подтверждении и обновит дисклеймер 1`] = `
<div
  className="BillingFrameSberbank BillingFrameSberbank_platform_desktop"
>
  <div
    className="BillingFrameSberbank__controls"
  >
    <TextInput
      autocomplete="on"
      className="BillingFrameSberbank__phoneInput"
      disabled={true}
      error=""
      hasClear={true}
      maxLength={16}
      name="phone"
      onChange={[Function]}
      placeholder="Номер телефона"
      radius="r8"
      size="l"
      type="tel"
      value="+7 977 123-45-67"
      valueProcessor={[Function]}
    />
    <Button
      className="BillingFrameSberbank__button"
      color="green"
      disabled={true}
      onClick={[Function]}
      size="l"
      type="button"
      width="default"
    >
      Продолжить
    </Button>
  </div>
  <div
    className="BillingFrameSberbank__smsConfirmationText"
  >
    <div
      className="BillingFrameSberbank__smsConfirmationTextHeader"
    >
      Подтвердите платёж по смс
    </div>
    <div>
      Сбербанк пришлет вам смс с кодом с номера 900.
    </div>
    <div>
      Отправьте код в ответном сообщении, чтобы подтвердить оплату.
    </div>
  </div>
  <div
    className="BillingFrameSberbank__disclaimer"
  >
    Если сообщение долго не приходит, 
    <Link>
      оплатите на сайте Сбербанка
    </Link>
     или  выберите другой способ оплаты
  </div>
</div>
`;
